[gd_scene load_steps=7 format=3 uid="uid://d3lsrrw2xym7u"]

[ext_resource type="Script" path="res://scenes/objects/stairs.gd" id="1_rlyje"]
[ext_resource type="Texture2D" uid="uid://nrsv31taubtf" path="res://art/Exit_Stairs.png" id="2_0nqe0"]
[ext_resource type="PackedScene" uid="uid://cwnfbboqr4awi" path="res://scenes/ghost scenes/ghost_timer.tscn" id="3_gjaye"]
[ext_resource type="Texture2D" uid="uid://djqhux3bfirhh" path="res://art/Ghost_Interact0.png" id="4_tiayl"]
[ext_resource type="Texture2D" uid="uid://cv74qjtukosd3" path="res://art/Ghost_Interact3.png" id="5_n5vra"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eu3k4"]

[node name="Stairs" type="Node2D"]
script = ExtResource("1_rlyje")

[node name="exit_anim" parent="." instance=ExtResource("3_gjaye")]
visible = false
offset_left = -5.0
offset_top = -27.0
offset_right = 35.0
offset_bottom = 13.0
max_value = 20.0
texture_under = ExtResource("4_tiayl")
texture_progress = ExtResource("5_n5vra")
tint_over = Color(0.467114, 0.502973, 0.538344, 1)
tint_progress = Color(0.221178, 0.205954, 0.236821, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0nqe0")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_eu3k4")

[node name="exit_timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="exit_timer" to="." method="_on_exit_timer_timeout"]
